move all versions in the parent pom to be reused, and fix the launcher #193